<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundHistory"
            android:padding="@dimen/size_10"
            android:text="@string/taxi_exchange_notification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/size_25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/user_box_decoration"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_date"
                android:textColor="@color/notification_date_time"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_date_time"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_time"
                android:textColor="@color/notification_date_time"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_date_time"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_bid_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_date_time"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_taxi_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_taxi_type"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_total_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:elevation="1dp"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_txt_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_from"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_from_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item_round_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:src="@drawable/ic_2_way"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/item_not_round_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:src="@drawable/ic_1_way"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/item_to_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_has_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_bill"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_ceiling_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_price"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_ceiling_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_price"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_bid_type_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/item_bid_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_bill"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_direct_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_price"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_direct_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_price"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_price_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/item_txt_price_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:text="@string/txt_price_offer"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/item_price_offer_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/notification_price"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_note_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                android:textStyle="bold"
                android:visibility="gone"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/iron" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_time_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/iron" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/bid_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:backgroundTint="@color/iron"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_time_remaining_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_5"
                android:textColor="@color/brand_red"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.01"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="UselessParent">


                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="@dimen/size_10"
                    android:paddingLeft="@dimen/size_10"
                    android:paddingRight="@dimen/size_10"
                    android:paddingTop="@dimen/size_10"
                    android:text="@string/txt_accept"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size_12" />

                <Button
                    android:id="@+id/btn_direct_bid"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="@dimen/size_10"
                    android:paddingLeft="@dimen/size_10"
                    android:paddingRight="@dimen/size_10"
                    android:paddingTop="@dimen/size_10"
                    android:text="@string/txt_direct_bid"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size_12"
                    android:visibility="gone"/>


                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="@dimen/size_10"
                    android:paddingLeft="@dimen/size_20"
                    android:paddingRight="@dimen/size_20"
                    android:paddingTop="@dimen/size_10"

                    android:text="@string/txt_cancel"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size_12" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>