<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_click"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_date"
            android:textColor="@color/notification_date_time"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_date_time"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_time"
            android:textColor="@color/notification_date_time"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_date_time"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_bid_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_date_time"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_taxi_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_taxi_type"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_total_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:elevation="1dp"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_txt_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_from"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_from_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:src="@drawable/ic_2_way"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/item_not_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:src="@drawable/ic_1_way"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/item_to_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_has_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_bill"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_ceiling_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_price"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_ceiling_price_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_price"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_bid_type_direct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/item_bid_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_bill"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_direct_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_price"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_direct_price_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_price"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_price_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/item_txt_price_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/txt_price_offer"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/item_price_offer_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/notification_price"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_note_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_time_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

